--- a/login.html
+++ b/login.html
@@ -128,7 +128,7 @@
             <p><?php echo $taken ?></p>
             <?php } ?>
             <input type="password" name="password" class="input-field" placeholder="Enter Password" required>
-            <button name="register" type="rsubmit" class="submit-btn"> Register </button>
+            <button name="register" type="submit" class="submit-btn"> Register </button>
         </form>
     </div>
 
